--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
   <style>:root{--color-background:#f5f7fa;--color-block:#abe4ff;--color-primary:#4a90e2;--color-primary-light:#6ba3e8;--color-accent:#50c9ce;--color-warning:#fff3cd;--color-warning-border:#ffc107;--color-danger:#f44336;--color-success:#4caf50;--color-card-bg:#ffffff;--color-text-primary:#2c3e50;--color-text-secondary:#6c757d}*{box-sizing:border-box}body{margin:0;padding:0;background-color:var(--color-background);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;color:#333}</style><link rel="stylesheet" href="styles-5N3VNN5U.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-5N3VNN5U.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-XYW3QHUQ.js" type="module"></script></body>
+  <script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-MQBUFIJJ.js" type="module"></script></body>
 </html>
