--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="冰箱管家">
     <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
-  <style>:root{--color-background:#f5f7fa;--color-block:#abe4ff;--color-primary:#4a90e2;--color-primary-light:#6ba3e8;--color-accent:#50c9ce;--color-warning:#fff3cd;--color-warning-border:#ffc107;--color-danger:#f44336;--color-success:#4caf50;--color-card-bg:#ffffff;--color-text-primary:#2c3e50;--color-text-secondary:#6c757d}*{box-sizing:border-box}body{margin:0;padding:0;background-color:var(--color-background);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;color:#333}</style><link rel="stylesheet" href="styles-5N3VNN5U.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-5N3VNN5U.css"></noscript></head>
+  <style>:root{--color-background:#f5f7fa;--color-block:#abe4ff;--color-primary:#4a90e2;--color-primary-light:#6ba3e8;--color-accent:#50c9ce;--color-warning:#fff3cd;--color-warning-border:#ffc107;--color-danger:#f44336;--color-success:#4caf50;--color-card-bg:#ffffff;--color-text-primary:#2c3e50;--color-text-secondary:#6c757d;--font-size-xs:.75rem;--font-size-sm:.875rem;--font-size-base:1rem;--font-size-lg:1.125rem;--font-size-xl:1.25rem;--font-size-2xl:1.5rem;--font-size-3xl:1.875rem}*{box-sizing:border-box}html{font-size:100%}body{margin:0;padding:0;background-color:var(--color-background);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;color:#333;font-size:var(--font-size-base);line-height:1.5}</style><link rel="stylesheet" href="styles-USSVNM4X.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-USSVNM4X.css"></noscript></head>
   <body>
     <app-root></app-root>
-  <script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-XYW3QHUQ.js" type="module"></script></body>
+  <script src="polyfills-B6TNHZQ6.js" type="module"></script><script src="main-LEHPAPZ3.js" type="module"></script></body>
 </html>
